// Protocol for apiserver.

syntax = "proto3";

package apiserverproto;

service APIServer {
  rpc InvokeFunction (InvokeFunctionRequest) returns (InvokeFunctionReply) {
  }
  rpc ListFunctions (ListFunctionsRequest) returns (ListFunctionsReply) {
  }
}

message InvokeFunctionRequest {
  string request_id = 1;
  string account_id = 2;
  string function_name = 3;
  bytes event = 4;
}

message InvokeFunctionReply {
  string request_id = 1;
  bytes body = 2;
  int64 server_side_latency_in_ms = 3;
}

message ListFunctionsRequest {
}

message ListFunctionsReply {
  repeated FunctionConfig functions = 1;
}

message FunctionConfig {
  string function_name = 1;
  int32 timeout_in_secs = 2;
  int32 memory_in_bytes = 3;
  string handler = 4;
}
